stop overflowing data on the popover sort the resource pools sum RAM and CPU commitment in templates

--- a/web/static/css/main.css
+++ b/web/static/css/main.css
@@ -756,6 +756,10 @@ rect {
     margin-top: 20px;
 }
 
+.popover{
+    max-width: none;
+}
+
 .popover table{
     white-space: nowrap;
 }
